--- a/公链/公信宝/公信宝数据交易所产品白皮书.md
+++ b/公链/公信宝/公信宝数据交易所产品白皮书.md
@@ -1,5 +1,7 @@
 # 公信宝数据交易所产品白皮书
 
+[TOC]
+
 ## 一.摘要
 
 公信宝数据交易所是⼀个通⽤的去中心化数据交易平台，是基于公信链GXChain开发的首个大型商业应用， 公信宝数据交易所具有不缓存沉淀数据、保护个人隐私、保护数据版权、有效遏制造假以及支持双向匿名交易等特点。面向的典型客户为互联网金融领域的网络贷款、汽车金融、消费金融、银行等有数据交换需求的企业，同时也积极拓展在政府、保险、医疗、物流等垂直领域的数据交换，以去中心化思维解决了各个行业的数据安全交换和流通等环节中一直没有解决的诸多核心信任问题，并可以为全社会所用，广泛使用于公民的学习、工作、生活等各种应用场景中，让数据释放应有价值，提升社会协作效率。
