--- a/公链/彩色币白皮书.md
+++ b/公链/彩色币白皮书.md
@@ -4,6 +4,8 @@
 
 翻译：Really
 
+[TOC]
+
 ## 摘要
 
 比特币是世界上第一个去中性化的数字货币，用加密令牌可以轻松实现存储和转移，用一个点对点的网络承载信息，对同步数据进行散列处理来防止双重支付，和强有力的脚本处理系统来判别令牌的所有权。不断成长的技术和商业基础支持着比特币的发展。
@@ -84,7 +86,7 @@ BitcoinX的理念是在技术上将比特币网络从其货币价值中抽离出
                 17ztLiaGdWcWFX8CgYqWGQPEizepPLsSrb : 500000,
                 19GAFukX9ixSDLy1p2UEed2mpDQ69QPUXr : 2125735,
                 1MyK5te6U6zGoom68nVEzTU2x949ReNySN : 2500000
-
+    
         outputs: [
                 1LQhUnH2UY9cuLh8qvHUNPL3GgLVWU5ziD : 1000000,
                 1PEFUd66e2Q7w4w4KisZRSaupNJz7K7dpL : 1000000,
