--- a/核心技术/加密技术/盲签名.md
+++ b/核心技术/加密技术/盲签名.md
@@ -1,1 +1,43 @@
-# 
+# 盲签名
+
+[TOC]
+
+盲签名是由 于1982 年提出的。盲签名因为具有盲性这一特点，可以有效保护所签署消息的具体内容，所以在电子商务和电子选举等领域有着广泛的应用。
+
+## 简介
+
+盲签名允许消息者先将消息盲化，而后让签名者对盲化的消息进行签名，最后消息拥有者对签字除去盲因子，得到签名者关于原消息的签名。盲签名就是接收者在不让签名者获取所签署消息具体内容的情况下所采取的一种特殊的数字签名技术，它除了满足一般的数字签名条件外，还必须满足下面的两条性质：
+
+1. 签名者对其所签署的消息是不可见的，即签名者不知道他所签署消息的具体内容。
+2. 签名消息不可追踪，即当签名消息被公布后，签名者无法知道这是他哪次的签署的。
+
+## 性质
+
+盲签名算法是具有下列两个特性的数字签名算法：
+
+1. 消息的内容对签名者是不可见的
+2. 在签名被接受者公开后，签名者不能追踪签名。
+
+其基本性质为：
+
+1. 不可伪造性。除了签名者本人外，任何人都不能以他的名义生成有效的盲签名。这是一条最基本的性质。
+2. 不可抵赖性。签名者一旦签署了某个消息，他无法否认自己对消息的签名。
+3. 盲性。签名者虽然对某个消息进行了签名，但他不可能得到消息的具体内容。
+4. 不可跟踪性。一旦消息的签名公开后，签名者不能确定自己何时签署的这条消息。
+
+一个盲签名的可操作性和实现速度取决于以下几个方面：
+
+1. 密钥的长度；
+2. 盲签名的长度；
+3. 盲签名的算法和验证算法。
+
+## 步骤
+
+- 接收者首先将待签数据进行盲变换，把变换后的盲数据发给签名者。
+- 经签名者签名后再发给接收者。
+- 接收者对签名再作去盲变换，得出的便是签名者对原数据的盲签名。
+- 这样便满足了条件①。要满足条件②，必须使签名者事后看到盲签名时不能与盲数据联系起来，这通常是依靠某种协议来实现的。
+
+## 意义
+
+盲签名在某种程度上保护了参与者的利益，但不幸的是盲签名的匿名性可能被犯罪份子所滥用。为了阻止这种滥用，人们又引入了公平盲签名的概念。公平盲签名比盲签名增加了一个特性，即建立一个可信中心，通过可信中心的授权，签名者可追踪签名。
