--- a/核心技术/加密技术/零知识证明.md
+++ b/核心技术/加密技术/零知识证明.md
@@ -1,1 +1,27 @@
-# 
+# 零知识证明
+
+“零知识证明”－zero-knowledge proof，是由S.Goldwasser、S.Micali及C.Rackoff在20世纪80年代初提出的。它指的是证明者能够在不向验证者提供任何有用的信息的情况下，使验证者相信某个论断是正确的。
+
+零知识证明在网络安全协议中用的比较多，尤其是数字签名，身份认证。
+
+## 实质
+
+一种涉及两方或更多方的协议，即两方或更多方完成一项任务所需采取的一系列步骤。证明者向验证者证明并使其相信自己知道或拥有某一消息，但证明过程不能向验证者泄漏任何关于被证明消息的信息。大量事实证明，零知识证明在密码学中非常有用。如果能够将零知识证明用于验证，将可以有效解决许多问题。
+
+## 简介
+
+在S.Goldwasser等人提出的零知识证明中，证明者和验证者之间必须进行交互，这样的零知识证明被称为“交互零知识证明”。80年代末，Blum等人进一步提出了“非交互零知识证明”的概念，用一个短随机串代替交互过程并实现了零知识证明。非交互零知识证明的一个重要应用场合是需要执行大量密码协议的大型网络。
+
+在零知识证明中，个人(或器件)可以在不泄漏任何秘密的情况下，证明他知道这个秘密。如果能够将零知识证明用于验证，将可以有效解决许多问题。
+
+## 定义
+
+零知识证明满足三个属性：
+
+1. 如果语句为真，诚实的验证者（即，正确遵循协议的验证者）将由诚实的证明者确信这一事实。
+2. 如果语句为假，不排除有概率欺骗者可以说服诚实的验证者它是真的。
+3. 如果语句为真，证明者的目的就是向验证者证明并使验证者相信自己知道或拥有某一消息，而在证明过程中不可向验证者泄漏任何有关被证明消息的内容。
+
+零知识证明并不是数学意义上的证明，因为它存在小概率的误差，欺骗者有可能通过虚假陈述骗过证明者。换句话来说，零知识证明是概率证明而不是确定性证明。但是也存在有技术能将误差降低到可以忽略的值。
+
+零知识的形式定义必须使用一些计算模型，最常见的是图灵机的计算模型。
