--- a/公链/Ethereum/以太坊概述.md
+++ b/公链/Ethereum/以太坊概述.md
@@ -1,6 +1,8 @@
 # 以太坊
 
-## 基本信息
+## 简述
+
+## 特点
 
 - 加密技术：SHA-3和Secp256k1椭圆曲线算法
 - 共识机制： PoW->PoS
@@ -19,6 +21,22 @@
 
 智能合约：以计算机程序的方式来缔结和运行各种合约。->去中心化
 账户：比特币没有账户而采用UTXO模型记录系统状态，导致可通过交易历史推算出用户余额。以太坊以账户记录系统状态，存储余额信息、智能代码和内部数据等。支持不同账户间转移数据。
+
+## 发展路线
+
+- 2013年底，Vitalik Buterin发布以太坊初版白皮书
+- 2014年2月，以太坊社区、代码数量、wiki内容、商业基础结构和法律策略逐渐完善
+- 2014年4月，Gavin Wood发表以太坊虚拟机技术黄皮书
+- 2014年7月24日，以太坊开放为期42天以太币预售，共募集到31531个比特币
+- 2015年5月，发布最后一个测试网络，POC9，代号Olympic
+- 2015年7月，发布正式以太坊网络，以太坊区块链正式上线运行
+
+## 网站
+
+- 官网：<https://www.ethereum.org/>
+- 论坛：<http://forum.ethereum.org/>
+- 社区：<https://ethfans.org/>
+- 博客：<https://blog.ethereum.org/>
 
 ## 白皮书
 
