--- a/公链/公信宝/公信宝概述.md
+++ b/公链/公信宝/公信宝概述.md
@@ -1,11 +1,13 @@
 # 公信宝概述
 
-- 加密技术：SHA256和椭圆曲线算法
-- 共识机制：DPOS和POCS实现区块链记账和数据交换共识机制
+## 简述
 
 公信宝是一个点对点的去中心化的数据交易平台。基于区块链的去中心化数据交易所，提供数据点对点交易，解决了交易多方的信任问题。
 
-特点:
+## 特点
+
+- 加密技术：SHA256和椭圆曲线算法
+- 共识机制：DPOS和POCS实现区块链记账和数据交换共识机制
 
 - 无数据沉淀，公信宝数据交易所不缓存任何数据源数据，确保数据源生产者的利益最大化，避免了自有数据泄露的风险，打破了传统中心化技术中对交易数据进行缓存的缺陷
 - 点对点数据传输，在交易查询匹配后，数据以点对点方式传输，写入区块链的哈希值作为完成该笔交易的存证
@@ -19,6 +21,16 @@
 - 高频交易支持，公信链采用DPOS机制，可使区块确认时间缩短至3秒，先进的高频交易技术，使得公信宝数据交易所达到每秒百万次交易频率
 - 公平定价与实时结算，数据单价由联盟会员共同投票决定，具有灵活调整的特点，充分发挥了市场调节规律，尊重了各联盟会员单位的定价权。公信币使得实时结算便捷化、透明化，时间戳技术让客户消费有据可查
 - 准入和惩罚机制，公信宝对联盟企业严格审核，有数据生成能力和切实需求的企业方可进入联盟，对数据造假者执行严厉的惩罚机制，有效遏制了假数据的产生
+
+## 发展
+
+## 网站
+
+- 官网：
+    - <https://www.gxb.io/>
+    - <https://gxs.gxb.io/>
+- github：<https://github.com/gxchain/>
+- 社区：<https://forum.gxb.io/>
 
 ## 收集资料
 
