--- a/活动/活动纪要.md
+++ b/活动/活动纪要.md
@@ -8,3 +8,7 @@
 - [区块链分叉的技术和商业本质](2018-03/区块链分叉的技术和商业本质.md)
 - [区块链技术应用的机遇与挑战](2018-03/区块链技术应用的机遇与挑战.md)
 - [iTalk-249 斐讯介绍商业模式 +矿机](2018-03/iTalk-249-斐讯.md)
+- [听话FM区块链品牌战略研讨会](2018-03/听话FM区块链品牌战略研讨会.md)
+- [理性探索区块链研讨会](2018-03/理性探索区块链研讨会.md)
+
+
