--- a/区块链/公链/BitCoin/比特币概述.md
+++ b/区块链/公链/BitCoin/比特币概述.md
@@ -2,6 +2,7 @@
 
 - 一种去中心化的电子加密货币
 - 比特币由[中本聪](../../人物/中本聪.md)（化名）提出构想并给出第一份实现，后续由社区接手
+- 比特币是基于区块链技术的一种数字货币实现，比特币网络是历史上首个经过大规模、长时间检验的数字货币系统。
 - 简单历史:
   - 2007年5月开始编写比特币
   - 2008年8月注册域名bitcoin.org
@@ -13,7 +14,11 @@
 
 ## 收集资料
 
+- 书: [精通比特币](http://zhibimo.com/read/wang-miao/mastering-bitcoin/index.html)
 - [比特币白皮书](比特币白皮书.md)
 - [侧链白皮书](侧链白皮书.md)
 - [比特币闪电网络白皮书](比特币闪电网络白皮书.md)
 - [比特币软硬分叉](比特币软硬分叉.md)
+- [Segwit隔离见证](Segwit隔离见证.md)
+
+
