--- a/区块链/公链/Ethereum/以太坊概述.md
+++ b/区块链/公链/Ethereum/以太坊概述.md
@@ -2,6 +2,8 @@
 
 ## 简述
 
+以太坊是一个全新开放的区块链平台，它允许任何人在平台中建立和使用通过区块链技术运行的去中心化应用。
+
 - [Vitalik](../..//人物/Vitalik.md)
 
 ## 特点
@@ -13,7 +15,7 @@
 相比于比特币，以太坊每个网络节点都运行着一个以太坊虚拟机，完整节点中还多了静态代码，与之相关的账户信息和代码此时的状态
 相比比特币，以太坊区块链技术特点：
 
-1. 支持图灵完备的智能合约，设计了编程语言Solidity和[虚拟机EVM](../../核心技术/智能合约/虚拟机-EVM.md)；
+1. 支持图灵完备[^1]的智能合约，设计了编程语言Solidity和[虚拟机EVM](../../核心技术/智能合约/虚拟机-EVM.md)；
 2. 选用了内存需求较高的哈希函数，避免出现强算力矿机、矿池攻击；
 3. 叔块（uncle block）激励机制，降低矿池的优势，并减少了区块产生间隔（10分钟降低为15秒左右）
 4. 采用账户系统和世界状态，而不是UTXO，容易支持更复杂的逻辑
@@ -26,16 +28,28 @@
 
 ## 发展路线
 
-- 2013年底，Vitalik Buterin发布以太坊初版白皮书
-- 2014年2月，以太坊社区、代码数量、wiki内容、商业基础结构和法律策略逐渐完善
-- 2014年4月，Gavin Wood发表以太坊虚拟机技术黄皮书
-- 2014年7月24日，以太坊开放为期42天以太币预售，共募集到31531个比特币
-- 2015年5月，发布最后一个测试网络，POC9，代号Olympic
-- 2015年7月，发布正式以太坊网络，以太坊区块链正式上线运行
+2013年末，Vitalik Buterin发布初版以太坊白皮书，详细描述了以太坊协议的技术设计和基本原理，以及智能契约的结构
+
+2014年1月，Vitalik正式宣布以太坊
+
+2014年4月，Gavin发表了以太坊黄皮书，作为以太坊虚拟机的技术说明
+
+2014年6月开始，开放为期24天以太币预售，募集31591比特币，市值18439086美元
+
+2015年5月，发布最后一个测试网络，代号Olympic
+
+2015年7月，以太坊第一阶段Frontier正式发布以太坊网络，以太坊区块链正式上线
+
+2016年3月，第二阶段Homestead开始运行，主要改善了安全性，同时提供图形界面客户端，提升易用性
+
+2016年6月，DAO基于以太坊进行众筹，受到漏洞攻击，造成价值5000万美元的以太币被冻结。社区最后通过硬分叉进行解决
+
+2017年3月，以太坊成立以太坊企业级联盟（Enterprise Ethereum lliance， EEA）
 
 ## 网站
 
 - 官网：<https://www.ethereum.org/>
+- github：<https://github.com/ethereum>
 - 论坛：<http://forum.ethereum.org/>
 - 社区：<https://ethfans.org/>
 - 博客：<https://blog.ethereum.org/>
@@ -44,3 +58,7 @@
 
 - [以太坊白皮书](以太坊白皮书.md)
 - [DAO白皮书](DAO白皮书.md)
+- [ERC20标准](ERC20标准.md)
+- [以太坊ERC20代币交易数据解析](以太坊ERC20代币交易数据解析.md)
+
+[^1]: 图灵完备性是针对一套数据操作而言的概念。数据操作规则可以是一门编程语言，也可以是计算机里具体实现了的指令集。当这套规则可以实现图灵机模型里的全部功能时，就称它具有图灵完备性。
