--- a/区块链/公链/公信宝/公信宝概述.md
+++ b/区块链/公链/公信宝/公信宝概述.md
@@ -4,6 +4,8 @@
 
 公信宝是一个点对点的去中心化的数据交易平台。基于区块链的去中心化数据交易所，提供数据点对点交易，解决了交易多方的信任问题。
 
+公信宝打造的公信链，是基于区块链建立的一个可信任的全领域数据交换价值网络，是区块链和大数据的结合，让各个领域的数据都可以非常自由、相互信任、极度高效地共享交换，为商业和生活提供更高的价值。
+
 ## 特点
 
 - 加密技术：[SHA256](../../核心技术/加密技术/散列算法-SHA系列.md)和椭圆曲线算法
