--- a/区块链/公链/公链列表.md
+++ b/区块链/公链/公链列表.md
@@ -8,7 +8,7 @@
 
 - [字节雪球](ByteBall/字节雪球白皮书.md)     --以DAG组网旨在消除比特币存在缺陷的一种电子货币
 
-- [BitcoinX](BitCoin/彩色币白皮书.md)      --通过对比特币染色的方式来实现电子货币价值代表某种特定资产，是一种建立在比特币数据块上的高级衍生应用协议
+- [BitcoinX](BitCoin/BitcoinX概述.md)      --通过对比特币染色的方式来实现电子货币价值代表某种特定资产，是一种建立在比特币数据块上的高级衍生应用协议
 
 ## 公链基础链
 
@@ -28,15 +28,23 @@
 
 - [Zilliqa概要](Zilliqa/Zilliqa概要.md)
 
-- [NULS](NULS/NULS白皮书.md)           --提供可定制的模块化区块链解决方案
+- [Lisk概要](Lisk/Lisk概述.md)
 
-- [Cosmos](Cosmos/Cosmos白皮书.md)       --以初始链为中心，其他链采用类似侧链机制的多区块链网络
+- [ARDA概要](ARDA/ARDA概述.md)
+
+- [Achain概要](Achain/Achain概述.md)
+
+- [Asch概要](Asch/Asch概述.md)
+
+- [NULS](NULS/NULS概述.md)           --提供可定制的模块化区块链解决方案
+
+- [Cosmos](Cosmos/Cosmos概要.md)       --以初始链为中心，其他链采用类似侧链机制的多区块链网络
 
 - [AMBR](AMBR/AMBR概述.md)           --基于Galaxygraph算法并以Credit Continuing（信用延续）为共识机制的DAG组网系统
 
 - [RootStock](RootStock/RootStock概述.md)  -- 作为比特币的侧链并以比特币计价交易的具有图灵完备的智能合约平台
 
-- [公信宝](公信宝/公信宝白皮书.md)  -- 基于区块链建立的一个可信任的全领域数据交换价值网络
+- [公信宝](公信宝/公信宝概述.md)  -- 基于区块链建立的一个可信任的全领域数据交换价值网络
 
 ## 公链应用链
 
