--- a/区块链/公链/公链概要信息.md
+++ b/区块链/公链/公链概要信息.md
@@ -1,5 +1,7 @@
 # 公链
 
+- 全部公链信息参见: [公链列表](公链列表.md)
+
 ## 简述
 
 - 公链是任何个人都可以不受限制自由加入和推出的网络，可以看成是**价值网络**
@@ -15,22 +17,28 @@
 
 ## 底层技术横向比较
 
-| 公链 | 加密算法 | 共识算法 | 出块时间 | 底层语言 | 智能合约 | TPS | 技术特色 |
-| --- | ------- | ------- | ------ | ------- | ------- | --- | ------ |
-| [BTC](BitCoin/比特币概述.md) | SHA256、Secp256k1 | POW | 10分钟 | c++ | 否 | 7 | UTXO模型 |
-| [ETH](Ethereum/以太坊概述.md) | SHA256、Secp256k1 | POW->POS | 15秒 | Go、c++、Solidity | 是 | 15 | 虚拟机EVM+智能合约 |
-| [NEO](NEO/NEO概述.md) | NeoQS | DBFT | 15秒 | c#、Java、Go | 是 | 1000 | 数字证书+智能合约+跨链交互 |
-| [NXT](NXT/NXT概述.md) | Curved5519 | POS | 60秒 | Java | 是 | 1000 | 锻造系统，主链+子链架构 |
-| [EOS](EOS/EOS概述.md) |  | DPOS | 3秒 | c/c++、WebAssembly | 是 | 100K | 石墨烯技术+跨链交互 |
-| ADA |  | POS | 3.5分钟 | Haskell | 是 | 10-15 | 分层架构 |
-| QTUM |  | POS+IPOS | 10秒 | c、c++、c#、Java | 是 | 70 | UTXO模型+以太坊虚拟机 |
-| LSK |  | DPOS | 10秒 | JavaScript | 是 | / | 侧链技术 |
-| ARDR |  | POS | 60秒 | Java | 是 | 100 | 主链+子链架构 |
-| AE |  | POS+POW | 30秒 | Erlang | 是 | 32 | 图灵完备通道，去中心化预言机 |
-| ACT |  | RDPOS | 3秒 | Gula | 是 | 1000 | 主链+多侧链架构 |
-| XAS |  | DPOS | 10秒 | JavaScript | 是 | 3000 | 侧链技术 |
-| ZIL |  | PBFT | / | / | 是 | 2400 | 分片技术 |
+| 公链                                    | 加密算法                          | 共识算法  | 出块时间 | 底层语言           | 智能合约 | TPS   | 技术特色                     |
+| --------------------------------------- | --------------------------------- | --------- | -------- | ------------------ | -------- | ----- | ---------------------------- |
+| [BTC](BitCoin/比特币概述.md)            | SHA2-256、Secp256k1               | POW       | 10分钟   | c++                | 否       | 7     | UTXO模型                     |
+| [ETH](Ethereum/以太坊概述.md)           | SHA3-256、Secp256k1               | POW->POS  | 15秒     | Go、c++、Solidity  | 是       | 15    | 虚拟机EVM+智能合约           |
+| [NEO](NEO/NEO概述.md)                   | NeoQS                             | DBFT      | 15秒     | c#、Java、Go       | 是       | 1000  | 数字证书+智能合约+跨链交互   |
+| [NXT](NXT/NXT概述.md)                   | Curved5519                        | POS       | 60秒     | Java               | 是       | 1000  | 锻造系统，主链+子链架构      |
+| [EOS](EOS/EOS概述.md)                   |                                   | DPOS      | 3秒      | c/c++、WebAssembly | 是       | 100K  | 石墨烯技术+跨链交互          |
+| [ADA](Cardano/Cardano概要.md)           |                                   | POS       | 3.5分钟  | Haskell            | 是       | 10-15 | 分层架构                     |
+| [QTUM](Qtum/量子链概述.md)              |                                   | POS+IPOS  | 10秒     | c、c++、c#、Java   | 是       | 70    | UTXO模型+以太坊虚拟机        |
+| [LSK](Lisk/Lisk概述.md)                 |                                   | DPOS      | 10秒     | JavaScript         | 是       | /     | 侧链技术                     |
+| [ARDR](ARDA/ARDA概述.md)                |                                   | POS       | 60秒     | Java               | 是       | 100   | 主链+子链架构                |
+| [AE](Aeternity/Aeternity概要.md)        |                                   | POS+POW   | 30秒     | Erlang             | 是       | 32    | 图灵完备通道，去中心化预言机 |
+| [ACT](Achain/Achain概述.md)             |                                   | RDPOS     | 3秒      | Gula               | 是       | 1000  | 主链+多侧链架构              |
+| [XAS](Asch/Asch概述.md)                 | SHA2-256、ED25519                 | DPOS+PBFT | 10秒     | JavaScript         | 是       | 3000  | 侧链技术                     |
+| [ZIL](Zilliqa/Zilliqa概要.md)           | 以secp256k1为基础的EC-Schnorr+POW | PBFT      | /        | /                  | 是       | 2400  | 分片技术                     |
+| [NULS](NULS/NULS概述.md)                |                                   | POC       |          |                    | 是       |       | 微内核、模块化、多链、跨链   |
+| [RootStock](RootStock/RootStock概述.md) | SHA256d                           | POW       | 10秒     | Java               | 是       |       | 侧链、根链虚拟机             |
 
 ## 发展方向
 
+## 关系图谱
 
+![区块链图谱](media/公链概要信息-区块链图谱.png)
+
+[脑图源文件](media/区块链关系.xmind)
