--- a/区块链/开发环境/开发环境概述.md
+++ b/区块链/开发环境/开发环境概述.md
@@ -18,3 +18,11 @@
 - 加解密算法库
 
 > 石墨烯就是一个工具库，比特股就是基于它开发的一个去中心化交易所。
+
+## 开发环境搭建
+
+- [Golang环境配置](环境搭建/GoLang环境配置.md)
+- [Ethereum源码编译环境配置](环境搭建/Ethereum源码编译环境.md)
+- [Ethereum私有链搭建](环境搭建/Ethereum私有链搭建.md)
+- [Ethereum私有链智能合约部署](环境搭建/Ethereum私有链智能合约部署.md)
+- [远程部署智能合约](远程部署智能合约.md)
